--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+	<rcc-main-menu></rcc-main-menu>
+ 	<ion-router-outlet id = "main"></ion-router-outlet>
 </ion-app>
