added dev and storage modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <ion-app>
-	<rcc-menu id ="rcc-main-menu"></rcc-menu>
+	<rcc-main-menu></rcc-main-menu>
  	<ion-router-outlet id ="rcc-main-content"></ion-router-outlet>
 </ion-app>
