added query widgets

--- a/src/app/features/custom-questions/custom-question.page/custom-question.page.html
+++ b/src/app/features/custom-questions/custom-question.page/custom-question.page.html
@@ -1,3 +1,281 @@
-<p>
-  custom-question.page works!
-</p>
+<ion-header [translucent]="true">
+	<ion-toolbar>
+		 <ion-buttons slot="start">
+			<ion-menu-button>
+			</ion-menu-button>
+		</ion-buttons>
+		<ion-title>
+			{{ "CUSTOM_QUESTIONS.HEADER" | transloco }}
+		</ion-title>
+	</ion-toolbar>
+</ion-header>
+
+<ion-content fullscreen = "true">
+	
+	<ion-list>
+
+		<ion-item>			
+			<ion-label position = "stacked" >{{ "CUSTOM_QUESTIONS.QUESTION.TEXT" | transloco }}</ion-label>
+			<ion-input [formControl] = "question"></ion-input>
+		</ion-item>
+
+		<ion-item>
+			<ion-label position = "stacked">{{ "CUSTOM_QUESTIONS.QUESTION.KIND" | transloco }}</ion-label>
+			<ion-select 
+				[formControl] = "kind"
+				interface		= "action-sheet"
+			>
+				<ion-select-option 
+					*ngFor	= "let k of kinds "
+					[value]	= "k"
+				>
+					{{ "CUSTOM_QUESTIONS.QUESTION.KINDS."+k.toUpperCase() | transloco }}
+				</ion-select-option>
+			</ion-select>
+		</ion-item>
+
+
+		<!-- SELECT -->
+		<ng-container *ngIf = "kind.value == 'select'">
+
+				<ion-item 
+					button
+					(click) = "addSelectOption()"
+					lines	= "full"
+				>
+						<ion-label> {{ "CUSTOM_QUESTIONS.QUESTION.ADD_OPTION" | transloco}} </ion-label>
+						<ion-icon name = "add-outline"></ion-icon>
+				</ion-item>
+
+				<ion-grid class = "ion-no-padding" >
+
+					<ion-row 						
+						*ngFor 		= "let option of selectOptions.controls; index as index"
+						[formGroup]	= "option"
+						class 		= "ion-align-items-end"
+					>
+						<ion-col size = "3" class = "ion-no-padding">
+
+							<ion-item lines = "full">
+								<ion-label position = "stacked">{{ "CUSTOM_QUESTIONS.QUESTION.OPTIONS.VALUE" | transloco }}</ion-label>
+								<ion-input formControlName = "value" type = "text"></ion-input>
+							</ion-item>
+
+						</ion-col>
+						<ion-col size = "7">
+
+							<ion-item lines = "full">
+								<ion-label position = "stacked">{{ "CUSTOM_QUESTIONS.QUESTION.OPTIONS.DESCRIPTION" | transloco }}</ion-label>
+								<ion-input formControlName =  "meaning" type ="text"></ion-input>									
+							</ion-item>
+
+						</ion-col>		
+
+						<ion-col size = "2" lines = full>
+
+							<ion-item lines = "full">
+								<ion-button 
+									(click) = "selectOptions.removeAt(index)"
+									fill	= "clear"
+									color	= "medium"
+								>
+									<ion-icon name = "trash-outline"></ion-icon>	
+								</ion-button>
+							</ion-item>
+
+						</ion-col>					
+					</ion-row>
+				</ion-grid>
+
+		</ng-container>
+
+
+		<!-- SCALE discrete -->
+
+		<ng-container *ngIf = "kind.value == 'scale_discrete'">
+
+				<ion-item 
+					button
+					(click) = "addScaleOption()"
+					lines	= "full"
+				>
+						<ion-label> {{ "CUSTOM_QUESTIONS.QUESTION.ADD_OPTION" | transloco}} </ion-label>
+						<ion-icon name = "add-outline"></ion-icon>
+				</ion-item>
+
+				<ion-grid class = "ion-no-padding">
+
+					<ion-row 						
+						*ngFor 		= "let option of scaleOptions.controls; index as index"
+						[formGroup]	= "option"
+						class 		= "ion-align-items-end"
+					>
+						<ion-col size = "3" class = "ion-no-padding">
+
+							<ion-item lines = "full">
+								<ion-label position = "stacked">{{ "CUSTOM_QUESTIONS.QUESTION.OPTIONS.VALUE" | transloco }}</ion-label>
+								<ion-input formControlName = "value" type = "number"></ion-input>
+							</ion-item>
+
+						</ion-col>
+						<ion-col size = "7">
+
+							<ion-item lines = "full">
+								<ion-label position = "stacked">{{ "CUSTOM_QUESTIONS.QUESTION.OPTIONS.DESCRIPTION" | transloco }}</ion-label>
+								<ion-input formControlName =  "meaning" type ="text"></ion-input>									
+							</ion-item>
+
+						</ion-col>		
+
+						<ion-col size = "2" lines = full>
+
+							<ion-item lines = "full">
+								<ion-button 
+									(click) = "scaleOptions.removeAt(index)"
+									fill	= "clear"
+									color	= "medium"
+								>
+									<ion-icon name = "trash-outline"></ion-icon>	
+								</ion-button>
+							</ion-item>
+
+						</ion-col>					
+					</ion-row>
+				</ion-grid>
+
+		</ng-container>
+
+
+
+
+
+		<!-- SCALE continuous -->
+
+		<ng-container *ngIf = "kind.value == 'scale_continuous'">
+
+			<ion-item>
+				<ion-label position = "stacked">
+					{{ "CUSTOM_QUESTIONS.QUESTION.MIN" | transloco}}
+				</ion-label>
+				<ion-input 
+					[formControl] 	= "min"
+					type			= "number"
+				></ion-input>
+			</ion-item>
+
+			<ion-item>
+				<ion-label position = "stacked">
+					{{ "CUSTOM_QUESTIONS.QUESTION.MAX" | transloco}}
+				</ion-label>
+				<ion-input 
+					[formControl] 	= "max"
+					type			= "number" 
+				></ion-input>
+			</ion-item>
+
+			<ion-grid class = "ion-no-padding">
+				<ion-row class = "ion-align-items-end">
+
+					<ion-col size = "8" class = "ion-no-padding">
+						<ion-item lines = "full">							
+							<ion-label>
+								{{ "CUSTOM_QUESTIONS.QUESTION.STEP" | transloco}}:
+							</ion-label>
+							<ion-toggle [formControl] = "useSteps">							
+							</ion-toggle>
+						</ion-item>
+					</ion-col>
+
+					<ion-col size = "4">
+						<ion-item>
+							<ion-label position = "stacked">
+								{{ "CUSTOM_QUESTIONS.QUESTION.SIZE" | transloco}}:
+							</ion-label>
+							<ion-input 
+								[formControl] 	= "step"
+								[disabled] 		= "!useSteps.value"
+								type			= "number" 
+							></ion-input>
+						</ion-item>
+					</ion-col>
+
+
+
+				</ion-row>
+			</ion-grid>
+
+		</ng-container>
+
+
+
+
+		<!-- INPUT -->
+
+		<ng-container *ngIf = "kind.value == 'input'">
+
+			<ion-grid class = "ion-no-padding">
+			
+				<ion-row class = "ion-align-items-end">
+
+					<ion-col class	= "ion-no-padding">
+
+						<ion-item >
+
+							<ion-label position = "stacked">
+								{{ "CUSTOM_QUESTIONS.QUESTION.ANSWER_TYPE" | transloco }}
+							</ion-label>
+
+							<ion-select [formControl] = "answerType" interface = "popover">
+								<ion-select-option 
+									*ngFor 	= "let type of answerTypes" 
+									[value]	= "type"
+								>
+									{{ "CUSTOM_QUESTIONS.QUESTION."+type.toUpperCase() | transloco }}
+								</ion-select-option>
+							</ion-select>
+
+						</ion-item>
+
+					</ion-col>
+
+
+					<ion-col 
+						*ngIf	= "answerType.value != 'string'"
+						size 	= "4"
+						class 	= "ion-no-padding" 
+					>
+
+						<ion-item>
+
+							<ion-label position = "stacked">
+								{{ "CUSTOM_QUESTIONS.QUESTION.UNIT"| transloco }}
+							</ion-label>
+							<ion-input [formControl] = "unit"></ion-input>					
+
+						</ion-item>
+
+					</ion-col>
+
+				</ion-row>
+		
+			</ion-grid>
+
+
+		</ng-container>
+
+	</ion-list>	
+
+
+	
+	
+</ion-content>
+
+<ion-footer>
+	<ion-button 
+		(click) 	= "createQuestion()"
+		expand 		= "block"
+		[disabled]	= "this.all.invalid"
+	>
+		Done
+	</ion-button>
+</ion-footer>
