added schedules and symptomchecks

--- a/src/app/features/custom-questions/custom-question.page/custom-question.page.html
+++ b/src/app/features/custom-questions/custom-question.page/custom-question.page.html
@@ -263,6 +263,10 @@
 
 		</ng-container>
 
+		<ion-item>
+			{{all.errors}}
+		</ion-item>
+
 	</ion-list>	
 
 
@@ -274,7 +278,7 @@
 	<ion-button 
 		(click) 	= "createQuestion()"
 		expand 		= "block"
-		[disabled]	= "this.all.invalid"
+		[disabled]	= "all.invalid"
 	>
 		Done
 	</ion-button>
