lots... added meta stores and custom seymptomchecks...

--- a/src/app/features/fallback-query-widgets/fallback-query-widget-unknown.component.html
+++ b/src/app/features/fallback-query-widgets/fallback-query-widget-unknown.component.html
@@ -1,4 +1,4 @@
- <ion-list *ngIf = "query && query.question" inset lines = "none">
+ <ion-list *ngIf = "query && query.question" [inset] = "true" lines = "none">
 
 	<ion-list-header><ion-label>{{query.question.meaning}}</ion-label></ion-list-header>
 
