--- a/src/app/common/home/home.page.html
+++ b/src/app/common/home/home.page.html
@@ -10,7 +10,7 @@
 	</ion-toolbar>
 </ion-header>
 
-<ion-content fullscreen = "true">
+<ion-content [fullscreen] = "true">
 	<ion-header collapse="condense">
 		<ion-toolbar>
 			<ion-title size="large">Blank</ion-title>
@@ -18,7 +18,6 @@
 	</ion-header>
 
 	<div id="container">
-		<strong>Ready to create an app?</strong>
-		<p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+		home :D
 	</div>
 </ion-content>
