--- a/src/app/features/questionaire/questionaire.page/questionaire.page.html
+++ b/src/app/features/questionaire/questionaire.page/questionaire.page.html
@@ -24,13 +24,15 @@
 
 </ion-header>
 
-<ion-content fullscreen = "true">
+<ion-content [fullscreen] = "true">
 	
+
+
 		<rcc-meta-store 
-			[metaStore] = "this.questionaire"
-			[filter]	= "this.filterFn"
+			[metaStore] 	= "this.questionaire"
+			[filter]		= "this.filterFn"			
 		>
-			<ng-template #itemLabelTemplate let-item = "item">			
+		<!-- 	<ng-template #itemLabelTemplate let-item = "item">					
 				<h3>{{item.translations.en || item.meaning}}</h3>
 				<p>			
 					{{item.type}}
@@ -40,7 +42,7 @@
 						{{option.value}} {{isLast ? '' : ','}}
 					</span>	
 				</p>							
-			</ng-template>
+			</ng-template> -->
 		</rcc-meta-store>
 
 </ion-content>
