--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,10 +1,14 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
+
+
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
+  //--ion-color-primary: #3880ff;
+  --ion-color-primary: #1abc9c;
+  //--ion-color-primary-rgb: 26, 188, 156;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
@@ -12,7 +16,9 @@
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
+  //--ion-color-secondary: #3dc2ff;
+  --ion-color-secondary: #e95849;
+  //--ion-color-secondary-rgb: 233, 88, 73;
   --ion-color-secondary-rgb: 61, 194, 255;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
@@ -60,8 +66,10 @@
   --ion-color-danger-tint: #ed576b;
 
   /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 36, 40;
+  //--ion-color-dark: #222428;
+  --ion-color-dark: #565656;
+  //--ion-color-dark-rgb: 34, 36, 40;
+  --ion-color-dark-rgb: 86, 86, 86;
   --ion-color-dark-contrast: #ffffff;
   --ion-color-dark-contrast-rgb: 255, 255, 255;
   --ion-color-dark-shade: #1e2023;
@@ -76,7 +84,9 @@
   --ion-color-medium-tint: #9d9fa6;
 
   /** light **/
-  --ion-color-light: #f4f5f8;
+  //--ion-color-light: #f4f5f8;
+  --ion-color-light: #f7f7f7;
+  //--ion-color-light-rgb: 247, 247, 247;
   --ion-color-light-rgb: 244, 245, 248;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0, 0, 0;
