--- a/src/app/features/fallback-query-widgets/fallback-query-widget-unknown.component.html
+++ b/src/app/features/fallback-query-widgets/fallback-query-widget-unknown.component.html
@@ -1,6 +1,6 @@
  <ion-list *ngIf = "query && query.question" [inset] = "true" lines = "none">
 
-	<ion-list-header><ion-label>{{query.question.meaning}}</ion-label></ion-list-header>
+	<ion-list-header><ion-label><h1>{{query.question | translate}}</h1></ion-label></ion-list-header>
 
 	<ion-item lines = "full">
 		Unable to load question data for this question.
