--- a/src/app/common/home/home.page.html
+++ b/src/app/common/home/home.page.html
@@ -48,7 +48,7 @@
 
 		<ion-item 
 			[button]	= "true"
-			(click)		= "qrCodeService.scan()"
+			(click)		= "qrCodeService.scanAndAnnounce()"
 		>
 			<ion-fab-button slot = "start">
 				<ion-icon
