--- a/src/app/common/qr-code/qr-code/qr-code.component.html
+++ b/src/app/common/qr-code/qr-code/qr-code.component.html
@@ -1,5 +1,7 @@
-<qrcode 
-		[qrdata]				= "data" 
-		[width]					= "256" 
-		[errorCorrectionLevel]	= "'M'"
-></qrcode>
+
+<div #qrcElement [class]="cssClass"></div>
+
+<!-- <qrcode 
+	[qrdata]				= "data" 
+	[errorCorrectionLevel]	= "'M'"
+></qrcode> -->
