--- a/src/app/features/qr-code-scanner/scan-modal/scan-modal.component.scss
+++ b/src/app/features/qr-code-scanner/scan-modal/scan-modal.component.scss
@@ -1,3 +1,27 @@
+ion-content::part(scroll) {
+	display:			flex;
+	flex-direction:		column;
+	justify-content:	stretch;
+	align-items:		stretch;
+}
+
+ion-content::part(scroll) > *{
+	flex:				1 0 0;
+}
+
+
+ion-content::part(scroll):before {
+	content:			'';
+	position:			absolute;
+	top:				0;
+	left:				0;
+	width:				100%;
+	height:				100%;
+	z-index:			10;
+	box-shadow:			0 0 0 3rem inset rgba(0,0,0,0.5);
+}
+
+
 .spin-wrapper{
 	height: 			100%;
 	display: 			flex;
