--- a/src/app/features/symptom-checks/share/share-page/share-page.component.scss
+++ b/src/app/features/symptom-checks/share/share-page/share-page.component.scss
@@ -1,6 +1,19 @@
 ion-content::part(scroll) {
 	display:				flex;
 	flex-direction:			column;
-	justify-content:		space-bewteen;
+	justify-content:		space-between;	
+}
+
+
+rcc-qr-code {
+	margin:					2rem auto;
+}
+
+.feedback {
+	display:				flex;
+	flex:					0 0 5rem;
+	flex-direction:			column;
+	justify-content:		center;
 	align-items:			center;
+	min-height:				5rem;
 }
